--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Gabi</title>
+    <style>
+        header {
+            background: black;
+            height: 10vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        header p {
+            font-size: 2rem;
+            color: white;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <p>
+            Carta Digital
+        </p>
+    </header>
     Oi gabi <br>
 
     clica aqui embaixo
