--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Gabi</title>
     <style>
         header {
-            background: black;
+            background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
             height: 10vh;
             display: flex;
             justify-content: center;
