--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
         </div>
       </section>
       <section data-aos="fade-up" class="none" id="sc-02">
-        Nos conhecemos a muitos anos, eu ainda namorava a sua dinda Tanise, lembro que fui em seu aniversário 6 anos e sua dinda me disse para ficar tranquilo em relação a você, pois talvez não iria gostar muito de mim no começo, mas que com o tempo as coisas iriam melhorar, e não é que ela tinha razão? HEHE. <br>
-        Lembro que você me cumprimentou com muito receio, naquele momento era apenas o namorado da dinda
+        Nos conhecemos a muitos anos, eu ainda namorava a sua dinda Tanise, lembro que fui em seu aniversário 6 anos e ela me disse para ficar tranquilo em relação a você, pois talvez não iria gostar muito de mim no começo, mas que com o tempo as coisas iriam melhorar, e não é que ela tinha razão? HEHE. <br>
+        Lembro que você me cumprimentou com muito receio, naquele momento era apenas o namorado da dinda.
+        <br>
+        <br>
+        <img src="./assets/img-01.jpg" alt=""> 
       </section>
     </main>
   </body>
