--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           primeiro pedido, viva intensamente cada momento, eles serão únicos
           para você. <br /><br />
         </div>
-        <div id="btn-sc-01" onclick="handleSc01()">
+        <div id="btn" class="btn-sc-01" onclick="handleSc01()">
           Aperta aqui para ler mais :)
         </div>
       </section>
@@ -52,7 +52,9 @@
         Lembro que você me cumprimentou com muito receio, naquele momento era apenas o namorado da dinda.
         <br>
         <br>
-        <img src="./assets/img-01.jpg" alt=""> 
+        <img src="./assets/img-01.jpg" alt="foto-gabi-6-anos">
+        <br>
+        <br>
       </section>
     </main>
   </body>
