--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p>Carta Digital</p>
     </header>
     <main>
-      <section data-aos="fade-up" id="sc-01">
+      <section data-aos="fade-up" id="sc">
         <div>
           Gabi, quando surgiu a oportunidade de mandar uma carta para você, o
           dindo logo pensou em uma ideia "Tech", pois eu não sou bom em escrever
@@ -47,7 +47,7 @@
           Aperta aqui para ler mais :)
         </div>
       </section>
-      <section data-aos="fade-up" class="none" id="sc-02">
+      <section data-aos="fade-up" class="none sc-02" id="sc">
         Nos conhecemos a muitos anos, eu ainda namorava a sua dinda Tanise, lembro que fui em seu aniversário 6 anos e ela me disse para ficar tranquilo em relação a você, pois talvez não iria gostar muito de mim no começo, mas que com o tempo as coisas iriam melhorar, e não é que ela tinha razão? HEHE. <br>
         Lembro que você me cumprimentou com muito receio, naquele momento era apenas o namorado da dinda.
         <br>
@@ -55,6 +55,9 @@
         <img src="./assets/img-01.jpg" alt="foto-gabi-6-anos">
         <br>
         <br>
+        <div id="btn" class="btn-sc-02" onclick="handleSc02()">
+            Bora continuar? :)
+          </div>
       </section>
     </main>
   </body>
