--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
     />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <style></style>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -48,16 +58,118 @@
         </div>
       </section>
       <section data-aos="fade-up" class="none sc-02" id="sc">
-        Nos conhecemos a muitos anos, eu ainda namorava a sua dinda Tanise, lembro que fui em seu aniversário 6 anos e ela me disse para ficar tranquilo em relação a você, pois talvez não iria gostar muito de mim no começo, mas que com o tempo as coisas iriam melhorar, e não é que ela tinha razão? HEHE. <br>
-        Lembro que você me cumprimentou com muito receio, naquele momento era apenas o namorado da dinda.
-        <br>
-        <br>
-        <img src="./assets/img-01.jpg" alt="foto-gabi-6-anos">
-        <br>
-        <br>
+        Nos conhecemos a muitos anos, eu ainda namorava a sua dinda Tanise,
+        lembro que fui em seu aniversário 6 anos e ela me disse para ficar
+        tranquilo em relação a você, pois talvez não iria gostar muito de mim no
+        começo, mas que com o tempo as coisas iriam melhorar, e não é que ela
+        tinha razão? HEHE. <br />
+        Lembro que você me cumprimentou com muito receio, naquele momento era
+        apenas o namorado da dinda.
+        <br />
+        <br />
+        <img src="./assets/img-01.jpg" alt="foto-gabi-6-anos" />
+        <br />
+        <br />
         <div id="btn" class="btn-sc-02" onclick="handleSc02()">
-            Bora continuar? :)
+          Bora continuar? :)
+        </div>
+      </section>
+      <section data-aos="fade-up" class="none sc-03" id="sc">
+        Os anos foram passando e mesmo distantes conseguimos colecionar momentos
+        especiais, os quais permitiram eu me transfornar no "Dindo Wagner",
+        lembro como se fosse hoje o primeiro dia que me chamou de dindo. <br />
+        Foi um dia muito especial, pois desde que te conheci já lhe considerava
+        minha afilhada e quis o melhor para você. <br />
+        <br />
+        Abaixo separei algumas fotos onde fomos construindo uma linda relação de
+        dindo e afilhada.
+        <br />
+        <br />
+        <div id="carouselExampleIndicators" class="carousel slide">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="3"
+              aria-label="Slide 4"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="4"
+              aria-label="Slide 5"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="5"
+              aria-label="Slide 6"
+            ></button>
           </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./assets/crs-01.jpg" class="d-block w-100" alt="" />
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/crs-02.jpg" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/crs-03.jpg" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/crs-04.jpg" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/crs-05.jpg" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/crs-06.jpg" class="d-block w-100" alt="..." />
+              </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Próximo</span>
+          </button>
+        </div>
+        <br />
+        <br />
+        <div id="btn" class="btn-sc-03" onclick="handleSc03()">
+          só mais um capítulo hehe
+        </div>
       </section>
     </main>
   </body>
