--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
               <img src="./assets/crs-05.jpg" class="d-block w-100" alt="..." />
             </div>
             <div class="carousel-item">
-                <img src="./assets/crs-06.jpg" class="d-block w-100" alt="..." />
-              </div>
+              <img src="./assets/crs-06.jpg" class="d-block w-100" alt="..." />
+            </div>
           </div>
           <button
             class="carousel-control-prev"
@@ -168,8 +168,27 @@
         <br />
         <br />
         <div id="btn" class="btn-sc-03" onclick="handleSc03()">
-          só mais um capítulo hehe
+          Último capítulo da carta, ok?
         </div>
+      </section>
+      <section data-aos="fade-up" class="none sc-04" id="sc">
+        Nos conhecemos a muitos anos, eu ainda namorava a sua dinda Tanise,
+        lembro que fui em seu aniversário 6 anos e ela me disse para ficar
+        tranquilo em relação a você, pois talvez não iria gostar muito de mim no
+        começo, mas que com o tempo as coisas iriam melhorar, e não é que ela
+        tinha razão? HEHE. <br />
+        Lembro que você me cumprimentou com muito receio, naquele momento era
+        apenas o namorado da dinda.
+        <br />
+        <br />
+        <img src="./assets/img-01.jpg" alt="foto-gabi-6-anos" />
+        <br />
+        <br />
+        <a href="https://github.com/WagnerGeroldi/gabi/blob/master/index.html" class="link">
+          <div id="btn" class="btn-sc-02" onclick="handleSc02()">
+            Quer inspecionar o código do dindo? Aperta aqui
+          </div>
+        </a>
       </section>
     </main>
   </body>
