--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </section>
       <section data-aos="fade-up" class="none sc-03" id="sc">
         Os anos foram passando e mesmo distantes conseguimos colecionar momentos
-        especiais, os quais permitiram eu me transfornar no "Dindo Wagner",
+        especiais, os quais permitiram eu me transformar no "Dindo Wagner",
         lembro como se fosse hoje o primeiro dia que me chamou de dindo. <br />
         Foi um dia muito especial, pois desde que te conheci já lhe considerava
         minha afilhada e quis o melhor para você. <br />
@@ -172,16 +172,9 @@
         </div>
       </section>
       <section data-aos="fade-up" class="none sc-04" id="sc">
-        Nos conhecemos a muitos anos, eu ainda namorava a sua dinda Tanise,
-        lembro que fui em seu aniversário 6 anos e ela me disse para ficar
-        tranquilo em relação a você, pois talvez não iria gostar muito de mim no
-        começo, mas que com o tempo as coisas iriam melhorar, e não é que ela
-        tinha razão? HEHE. <br />
-        Lembro que você me cumprimentou com muito receio, naquele momento era
-        apenas o namorado da dinda.
-        <br />
-        <br />
-        <img src="./assets/img-01.jpg" alt="foto-gabi-6-anos" />
+        Gabi, o dindo está muito feliz! Aproveita ao máximo a experiência e o dia que nos encontrarmos novamente certamente teremos muitos assuntos para compartilhar, pois o que está vivendo agora é excepcional. <br>
+        Esta "digital letter" serve também como um incentivo para o que está buscando em seu ensino técnico. A tecnologia é hoje a ferramenta mais importante que existe. Pode-se fazer qualquer coisa com ela, busque a "stack" que mais se identificou e vai fundo e lembre que sempre estarei torcendo por você e literamente o que precisar de mim, estarei aqui, longe fisicamente, mas totalmente disposto a lhe ajudar! <br>
+        Aproveite muito! Amo você.
         <br />
         <br />
         <a href="https://github.com/WagnerGeroldi/gabi/blob/master/index.html" class="link">
