--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
@@ -182,8 +183,11 @@
             Quer inspecionar o código do dindo? Aperta aqui
           </div>
         </a>
-      </section>
-    </main>
+    </section>
+</main>
+        <footer class="none" id="footer">
+            <p>Desenvolvido com muito <i class="fa fa-heart" aria-hidden="true"></i> </p>
+        </footer>
   </body>
   <script>
     AOS.init();
